src/objects/MICO_User_Story__c.object
<CustomObject>
    <fields>
        <fullName>Sub_Process__c</fullName>
        <label>Sub-Process</label>
        <picklist>
            <controllingField>Functional_Area__c</controllingField>
            <picklistValues>
                <fullName>Account Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics &amp; Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Design and Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaboration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Feeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Execution and Follow up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Planning  and Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile/Apps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Segmentation &amp; Cycle Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sharing Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Websites / Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webcall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edetail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Journey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinars</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submit_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supporting_BA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Business Analyst responsible for defining the acceptance criteria
Created on 01/07/2014 by SMills 
MICO</description>
        <inlineHelpText>The Business Analyst responsible for helping define and refine Acceptance Criteria in this User Story</inlineHelpText>
        <label>Business Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MICO_User_Stories3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Custodian__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will store the System Custodian information for the app: 
Created on 06/11/2014 by Preeti Grover: MICO</description>
        <inlineHelpText>The System Custodian for the application this User Story is related to. If not set when initially saving the User Story, it should be populated automatically based on the value on the associated App record</inlineHelpText>
        <label>System Custodian</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MICO_User_Stories4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to capture the System owner for the App: Created on 06/11/2014 by Preeti Grover: MICO</description>
        <inlineHelpText>The System Owner for the application this User Story is related to. If not set when initially saving the User Story, it should be populated automatically based on the value on the associated App record</inlineHelpText>
        <label>System Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MICO_User_Stories2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Product Owner User responsible for this User Story
Created on 01/07/2014 by SMills 
MICO</description>
        <inlineHelpText>Business/Product Owner for this User Story</inlineHelpText>
        <label>Product / Process Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MICO_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Validation_steps__c</fullName>
        <description>Validation Steps for this user story
Created on 06/11/2014 by Preeti Grover: MICO</description>
        <inlineHelpText>For exception cases, please list any specific validation checks that are required to ensure this User Story has been deployed successfully. These will then be run by the Technical Release Team post deployment

If none are needed please put &apos;N/A&quot;</inlineHelpText>
        <label>Validation steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <inlineHelpText>The source control tag related to this User Story</inlineHelpText>
        <label>Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Type__c</fullName>
        <description>The type of effort involved in this user story
Created on 06/11/2014 by Preeti Grover: MICO</description>
        <inlineHelpText>The type of work involved in delivering this User Story. This can be used when resource planning and should be populated by Developers or other technical experts as needed</inlineHelpText>
        <label>Work Type</label>
        <picklist>
            <picklistValues>
                <fullName>SFDC Config</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC Visualforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heroku</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>User Story</label>
    <listViews>
        <fullName>All_User_Stories</fullName>
        <columns>NAME</columns>
        <columns>Full_User_Story__c</columns>
        <columns>Proposed_Sprint__c</columns>
        <columns>Allocated_Sprint__c</columns>
        <columns>Story_Points_Total__c</columns>
        <columns>App__c</columns>
        <columns>Project__c</columns>
        <columns>Development_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All User Stories</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pre_Production_User_Stories</fullName>
        <columns>NAME</columns>
        <columns>Full_User_Story__c</columns>
        <columns>Proposed_Sprint__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Proposed_Sprint__c</field>
            <operation>equals</operation>
            <value>Pre production Updates</value>
        </filters>
        <label>Pre Production User Stories</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Project_All_ACE</fullName>
        <columns>NAME</columns>
        <columns>Development_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>ACE Digital Dashboard</value>
        </filters>
        <label>Project: ACE Digital Dashboard</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Project_All_C3</fullName>
        <columns>NAME</columns>
        <columns>Development_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>C3</value>
        </filters>
        <label>Project: C3</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Project_All_Cirrus</fullName>
        <columns>NAME</columns>
        <columns>Development_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>Stand Up Cirrus</value>
        </filters>
        <label>Project: Stand Up Cirrus</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Project_All_HCP</fullName>
        <columns>NAME</columns>
        <columns>Development_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>HCP Transparency Smart Form</value>
        </filters>
        <label>Project: HCP Transparency Smart Form</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Project_All_IRiSS</fullName>
        <columns>NAME</columns>
        <columns>Development_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>IRiSS</value>
        </filters>
        <label>Project: IRiSS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Project_All_LaunchPad</fullName>
        <columns>NAME</columns>
        <columns>Development_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>startsWith</operation>
            <value>Launchpad</value>
        </filters>
        <label>Project: LaunchPad</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Project_All_NTM</fullName>
        <columns>NAME</columns>
        <columns>Development_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>NTM</value>
        </filters>
        <label>Project: NTM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Project_All_RWE</fullName>
        <columns>NAME</columns>
        <columns>Development_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>RWE Knowledge Management</value>
        </filters>
        <label>Project: RWE Knowledge Management</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Project_All_SAPMAT</fullName>
        <columns>NAME</columns>
        <columns>Development_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>SAP Material Data</value>
        </filters>
        <label>Project: SAP Material Data</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Project_All_TrialForce</fullName>
        <columns>NAME</columns>
        <columns>Development_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>Trialforce Migration</value>
        </filters>
        <label>Project: Trialforce Migration</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Status_8_Passed_Complete</fullName>
        <columns>NAME</columns>
        <columns>Full_User_Story__c</columns>
        <columns>Proposed_Sprint__c</columns>
        <columns>Allocated_Sprint__c</columns>
        <columns>Story_Points_Total__c</columns>
        <columns>App__c</columns>
        <columns>Project__c</columns>
        <columns>Development_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Development_Stage__c</field>
            <operation>equals</operation>
            <value>Passed (Complete)</value>
        </filters>
        <label>Status: 08. Passed (Complete)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Status_Backlog</fullName>
        <columns>NAME</columns>
        <columns>Full_User_Story__c</columns>
        <columns>Proposed_Sprint__c</columns>
        <columns>Allocated_Sprint__c</columns>
        <columns>Story_Points_Total__c</columns>
        <columns>App__c</columns>
        <columns>Project__c</columns>
        <columns>Development_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Development_Stage__c</field>
            <operation>equals</operation>
            <value>Backlog</value>
        </filters>
        <label>Status: 01. Backlog</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Status_Cancelled</fullName>
        <columns>NAME</columns>
        <columns>Full_User_Story__c</columns>
        <columns>Proposed_Sprint__c</columns>
        <columns>Allocated_Sprint__c</columns>
        <columns>Story_Points_Total__c</columns>
        <columns>App__c</columns>
        <columns>Project__c</columns>
        <columns>Development_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Development_Stage__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>Status: 00. Cancelled</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>US-{0000}</displayFormat>
        <label>US Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Acceptance_Criteria_Freeze</fullName>
        <active>true</active>
        <description>Loclks accpetance criteria so it can only be edited by users with the &quot;Over ride Acceptance Criteria&quot; enabled on their user page</description>
        <errorConditionFormula>AND(
ISCHANGED( Acceptance_Criteria__c ),   
OR(
ISPICKVAL(Development_Stage__c,&quot;Ready for Test&quot;), 
ISPICKVAL(Development_Stage__c,&quot;In Test&quot;), 
ISPICKVAL(Development_Stage__c,&quot;Passed (Complete)&quot;),
ISPICKVAL(Development_Stage__c,&quot;Production - Ready for Release&quot;),
ISPICKVAL(Development_Stage__c,&quot;Production - Released&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>Acceptance_Criteria__c</errorDisplayField>
        <errorMessage>You can&apos;t amend the Acceptance Criteria at this stage in the User Story lifecycle. If you need to make an agreed change, revert the User Story Status and Chatter why you are making a change. Late changes should be agreed with the User Story team</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cancellation_Reason_Check</fullName>
        <active>true</active>
        <description>Checks that the cancellation reason is populate if the story is set to cancelled</description>
        <errorConditionFormula>AND( ISPICKVAL( Development_Stage__c , &quot;Cancelled&quot;) , ISBLANK( Cancellation_Reason__c ) )</errorConditionFormula>
        <errorMessage>You must enter a cancellation reason if you are cancelling this story</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Down</fullName>
        <active>true</active>
        <description>Loclks accpetance criteria so it can only be edited by users with the &quot;Over ride Acceptance Criteria&quot; enabled on their user page</description>
        <errorConditionFormula>AND(
ISCHANGED( Acceptance_Criteria__c ), 
 $Profile.Name &lt;&gt; &apos;System Administrator&apos;,  
OR(
ISPICKVAL(Development_Stage__c,&quot;5.3 Sprint Team - Awaiting Development &quot;), 
ISPICKVAL(Development_Stage__c,&quot;5.4 Sprint Team - In Development&quot;), 
ISPICKVAL(Development_Stage__c,&quot;5.5. Sprint - Awaiting Review&quot;), 
ISPICKVAL(Development_Stage__c,&quot;5.6. Sprint - Awaiting Release to SAT&quot;), 
ISPICKVAL(Development_Stage__c,&quot;5.7. Sprint - Awaiting SAT&quot;), ISPICKVAL(Development_Stage__c,&quot;5.8. Sprint - In Test&quot;),
ISPICKVAL(Development_Stage__c,&quot;5.9. Done&quot;), 
ISPICKVAL(Development_Stage__c,&quot;6. UAT - Awaiting testing&quot;), 
ISPICKVAL(Development_Stage__c,&quot;7. UAT – In Test&quot;), 
ISPICKVAL(Development_Stage__c,&quot;8. Production – Ready for Release&quot;),
ISPICKVAL(Development_Stage__c,&quot;9. Production – Released&quot;))
 )</errorConditionFormula>
        <errorDisplayField>Acceptance_Criteria__c</errorDisplayField>
        <errorMessage>You can&apos;t amend the Acceptance and/or Compliance Criteria once the user story is categorized as ready for development. Move the status back to &apos;With BPC&apos; to indicate you are working again on the Acceptance and/or Compliance Criteria and Chatter the reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MICO_Approved_Status_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF((ISPICKVAL(Approval_Status__c , &quot;Approved&quot;) || ISPICKVAL(Approval_Status__c , &quot;Pending Approval&quot;))&amp;&amp; (ISCHANGED(  System_Custodian__c )||  ISCHANGED(Computer_Systems_Quality__c) ||  ISCHANGED(Compliance_Owner__c) ||  ISCHANGED(System_Owner__c) ),true,false)</errorConditionFormula>
        <errorMessage>You cannot change Approver once the User Story is approved or is in Pending Approval</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_GxP_and_Criticality</fullName>
        <active>true</active>
        <description>Makes sure users populate the GxP and criticality picklists</description>
        <errorConditionFormula>OR( ISPICKVAL(GXP__c, &apos;&apos;), ISPICKVAL(Critical__c, &apos;&apos;))</errorConditionFormula>
        <errorMessage>You must populate both the Quality Critical and GxP fields</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pending_Approval_Status</fullName>
        <active>true</active>
        <description>Locks the &apos;As A…&apos;, &apos;I want to…&apos; or  &apos;so that…&apos; fields when the Approval Status is Pending Approval</description>
        <errorConditionFormula>AND(
ISPICKVAL(Approval_Status__c,&quot;Pending Approval&quot;), 
OR(
ISCHANGED(As_A_text__c),
ISCHANGED(I_Want_To__c),
ISCHANGED(So_that__c)
)
)</errorConditionFormula>
        <errorMessage>You can&apos;t amend the &apos;As A…&apos;, &apos;I want to…&apos; or  &apos;so that…&apos; fields when the Approval Status is Pending Approval</errorMessage>
    </validationRules>
</CustomObject>